i should stop commiting after multiple changes

--- a/RPG-Lite-GZDoom/Changelog.txt
+++ b/RPG-Lite-GZDoom/Changelog.txt
@@ -21,3 +21,4 @@
 	-added Scan Skill, when activated enemy statistics are displayed.
 	-Buffed holy fire
 	-Buffed Health regen skill heavilly
+	-Fixed RNG with random stat allocation
